# induction-prashanth

./: README.md
aruco_navigator/: CMakeLists.txt  package.xml
aruco_navigator/gazebo_world/: ArUco_worl
aruco_navigator/scripts/: aruco_navigator.py
coordinate_follower/: CMakeLists.txt  input.txt  package.xml
coordinate_follower/action/: CoordinateTraverse.action
coordinate_follower/scripts/: coordinate_follower_client.py  coordinate_follower_server.py
obstacle_avoider/: CMakeLists.txt  package.xml
obstacle_avoider/scripts/: obstacle_avoid.py
turtle_controller/: package.xml  setup.py
turtle_controller/turtle_controller/: turtle_control.py
week1/turtle_controller/turtle_controller/: turtle_control.py
